--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@commitlint/cli": "^14.1.0",
     "@commitlint/config-conventional": "^14.1.0",
     "@types/copy-webpack-plugin": "^8.0.1",
+    "@types/lodash": "^4.14.176",
     "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.3.1",
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.0",
+    "file-loader": "^6.2.0",
     "html-minimizer-webpack-plugin": "^3.3.1",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
@@ -56,5 +58,8 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
