--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "technology-summary",
+  "name": "fe-template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "serve": "webpack serve --config webpack/webpack.config.dev.ts",
-    "watch": "webpack --watch --config webpack/webpack.config.dev.ts",
     "build": "webpack --config webpack/webpack.config.prod.ts",
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "stylelint": "stylelint \"src/**/*.scss\"",
@@ -20,12 +19,10 @@
     "@commitlint/config-conventional": "^14.1.0",
     "@types/copy-webpack-plugin": "^8.0.1",
     "@types/lodash": "^4.14.176",
-    "@types/mini-css-extract-plugin": "^2.4.0",
     "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^4.3.1",
-    "@types/webpack-merge": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "autoprefixer": "^10.4.4",
     "css-loader": "^6.5.1",
     "cssnano-webpack-plugin": "^1.0.3",
     "eslint": "^8.2.0",
@@ -56,7 +53,7 @@
     "typescript": "^4.4.4",
     "webpack": "^5.62.1",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
+    "webpack-dev-server": "4.8.0",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
